--- a/src/css/common.css
+++ b/src/css/common.css
@@ -10,9 +10,28 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  font-family: 'Gill Sans';
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+button {
+  background-color: lightblue;
+  border-color: blue;
+
+}
+
+.timer {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
